# lasgun

./: .gitignore  .prettierrc  .travis.yml  Cargo.toml  LICENSE  README.md  netlify.toml  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: lib.yml
devhouse/: ownership.md  parallel_render_broken.rs
js/: .crates.toml  .gitignore  Cargo.toml  README.md
js/src/: lib.rs  utils.rs
js/www/: app.js  app.ts  index.html  index.js  package-lock.json  package.json  renderer.js  renderer.ts  smstdodeca.js  tsconfig.json  webpack.config.js  worker.js  worker.ts
js/www/scenes/: simple.js  simple.js.txt
js/www/scenes/meshes/: smstdodeca.js
src/: aggregate.rs  camera.rs  common  film.rs  img.rs  lib.rs  macros.rs  math.rs  output.rs  scene.rs  space.rs
src/accelerators/: bvh.rs  mod.rs
src/core/: math.rs  mod.rs
src/core/bxdf/: diffuse.rs  fresnel.rs  microfacet.rs  mod.rs  specular.rs
src/examples/: cornell.rs  output.rs  playground.rs  simple.rs  simplecows.rs  simplereflect.rs  spooky.rs
src/examples/meshes/: buckyball.rs  mod.rs  plane.rs  smstdodeca.rs
src/integrate/: integrate.rs  mod.rs
src/interaction/: bsdf.rs  mod.rs  surface.rs
src/light/: mod.rs  point.rs
src/material/: background.rs  glass.rs  matte.rs  metal.rs  mirror.rs  mod.rs  phong.rs  plastic.rs  refractive.rs
src/primitive/: aggregate.rs  geometry.rs  mod.rs
src/ray/: mod.rs  primary.rs
src/scene/: description.rs  node.rs
src/shape/: cuboid.rs  mesh.rs  mod.rs  sphere.rs  triangle.rs
src/space/: bounds.rs  mod.rs  normal.rs  ray.rs  transform.rs
www/: app.scss  app.ts  index.html  renderer.ts  vite.config.mjs  worker.ts
www/public/scenes/: playground.js  simple.js  simplecows.js
www/scenes/: playground.js  simple.js  simple.js.txt  simplecows.js  simplecows.js.txt
