[package]
name = "lasgun"
version = "0.1.0"
authors = ["Nick Frasser <nfrasser@gmail.com>"]

[features]
default = []
bin = ["image/png_codec", "num_cpus", "crossbeam-utils"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
required-features = ["bin"]

[[example]]
name = "simple"
path = "src/examples/simple.rs"
required-features = ["bin"]

[dependencies]
rand = "0.5"
nalgebra = "0.16.0"
num-traits = "0.2"
num_cpus = { version = "1.0", optional = true }
crossbeam-utils = {version = "0.5", optional = true }
image = { version = "*", optional = true }

[profile.release]
debug = false
lto = true
