[package]
name = "lasgun"
version = "0.1.0"
authors = ["Nick Frasser <nfrasser@gmail.com>"]
description = "A ray tracing library in Rust"
repository = "https://github.com/nfrasser/lasgun.git"
license = "MIT"
edition = "2018"

[features]
default = ["bin"]
lib = []
bin = ["image/png", "num_cpus"]

[[bin]]
name = "cli"
required-features = ["bin"]

[[example]]
name = "cornell"
path = "src/examples/cornell.rs"
required-features = ["bin"]

[[example]]
name = "playground"
path = "src/examples/playground.rs"
required-features = ["bin"]

[[example]]
name = "simple"
path = "src/examples/simple.rs"
required-features = ["bin"]

[[example]]
name = "simplereflect"
path = "src/examples/simplereflect.rs"
required-features = ["bin"]

[[example]]
name = "simplecows"
path = "src/examples/simplecows.rs"
required-features = ["bin"]

[[example]]
name = "spooky"
path = "src/examples/spooky.rs"
required-features = ["bin"]

[dependencies]
rand = "^0.7"
cgmath = "^0.17"
obj = "^0.10"
typed-arena = "^2.0"
partition = "^0.1"
bitflags = "^1.1"
num_cpus = { version = "^1.10", optional = true }

[dependencies.image]
version = "^0.23"
optional = true
default-features = false
features = ["png"]
